--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,31 @@
-# This is a basic workflow to help you get started with Actions
+name: Install Java 5 on GitHub Runner
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install dependencies
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          sudo apt-get update
+          sudo apt-get install -y wget
+          wget https://download.oracle.com/java/1.5.0_22/jdk-1_5_0_22-linux-i586.bin
+          chmod +x jdk-1_5_0_22-linux-i586.bin
+          echo "yes" | ./jdk-1_5_0_22-linux-i586.bin
+          sudo mv jdk1.5.0_22 /usr/lib/jvm/
+
+      - name: Set JAVA_HOME to Java 5
+        run: |
+          echo "JAVA_HOME=/usr/lib/jvm/jdk1.5.0_22" >> $GITHUB_ENV
+          echo "/usr/lib/jvm/jdk1.5.0_22/bin" >> $GITHUB_PATH
+
+      - name: Verify Java version
+        run: java -version
+
