--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Install Java 5 on GitHub Runner
+name: Install Java 8 on GitHub Runner
 
 on:
   push:
@@ -7,25 +7,17 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget
-          wget https://download.oracle.com/java/1.5.0_22/jdk-1_5_0_22-linux-i586.bin
-          chmod +x jdk-1_5_0_22-linux-i586.bin
-          echo "yes" | ./jdk-1_5_0_22-linux-i586.bin
-          sudo mv jdk1.5.0_22 /usr/lib/jvm/
-
-      - name: Set JAVA_HOME to Java 5
-        run: |
-          echo "JAVA_HOME=/usr/lib/jvm/jdk1.5.0_22" >> $GITHUB_ENV
-          echo "/usr/lib/jvm/jdk1.5.0_22/bin" >> $GITHUB_PATH
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
+        with:
+          java-version: '8'
 
       - name: Verify Java version
         run: java -version
+
 
