--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,3 +17,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y wget
 
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
+        with:
+          java-version: '8'
+
+      - name: Verify Java version
+        run: java -version
+
